# new_wb_bot

./: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
src/: bot.py
src/db/: database.py  set_db.py
src/func/: auth.py  behavior_decorators.py  drivers_server.py  new_auth.py  stavki.py
src/handlers/: auth.py  common.py  fiks.py  food.py
tests/: test_new_wb_bot.py
