[tool.poetry]
name = "new_wb_bot"
version = "0.1.0"
description = ""
authors = ["Stanislav <sta-tun-slav@yandex.ru>"]
packages = [
    { include = "./src" },
]

[tool.poetry.scripts]
run = "src.bot:run"

[tool.poetry.dependencies]
python = "^3.9"
aiogram = "^2.21"
typer = "^0.4.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
