[tool.poetry]
name = "new_wb_bot"
version = "0.1.0"
description = ""
authors = ["Stanislav <sta-tun-slav@yandex.ru>"]
packages = [
    { include = "./src" },
    { include = "./tests" }
]

[tool.poetry.scripts]
bot = "src.bot:run"
auth = "src.func.drivers_server:runner"
set_db = "src.db.set_db:runner"
stavki = "src.func.stavki:runner"

[tool.poetry.dependencies]
python = "^3.9"
aiogram = "^2.21"
typer = "^0.4.1"
SQLAlchemy = "^1.4.39"
PyMySQL = "^1.0.2"
selenium = "^4.3.0"
pytest = "^7.1.2"
Flask = "^2.1.2"
Flask-Cors = "^3.0.10"
requests = "^2.28.1"
webdriver-manager = "^3.8.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
